--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,65 +13,66 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-09 Sun 18:08]
-| <75>                                                                        |         |       |       |       |
-| Headline                                                                    | Time    |       |       |     % |
-|-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *98:45* |       |       | 100.0 |
-|-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 98:45   |       |       | 100.0 |
-| Active                                                                      |         | 98:45 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  5:36 |   5.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
-| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.5 |
-| COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.3 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   1.8 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.4 |
-| COMPLETED Add new index to formtter container                               |         |       |  0:19 |   0.3 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   0.8 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       |  0:27 |   0.5 |
-| COMPLETED Investigate borked travis build                                   |         |       |  0:37 |   0.6 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       |  0:23 |   0.4 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       |  1:26 |   1.5 |
-| COMPLETED Run tests that are passing on windows                             |         |       |  0:10 |   0.2 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.5 |
-| COMPLETED Merge pre and post workflows                                      |         |       |  0:16 |   0.3 |
-| COMPLETED Fix bug in aspect and helper generation                           |         |       |  0:15 |   0.3 |
-| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.1 |
-| CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.6 |
-| COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.6 |
-| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.0 |
-| COMPLETED Remove empty context                                              |         |       |  1:09 |   1.2 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   3.7 |
-| COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.4 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   7.2 |
-| COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.5 |
-| COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.4 |
-| COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
-| CANCELLED Remove formatter id                                               |         |       |  0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   3.4 |
-| COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.3 |
-| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.2 |
-| COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
-| COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.1 |
-| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.3 |
-| COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.4 |
-| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   3.7 |
-| COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
-| COMPLETED Improve project banner                                            |         |       |  0:32 |   0.5 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  10.8 |
-| COMPLETED Move emacs to rtags                                               |         |       |  5:28 |   5.5 |
-| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |   8.9 |
-| COMPLETED Create a dynamic expander in yarn                                 |         |       |  5:52 |   5.9 |
-| COMPLETED Create a streaming configuration expander                         |         |       |  1:15 |   1.3 |
-| COMPLETED Merge helper annotations with helper expander                     |         |       |  0:14 |   0.2 |
-| COMPLETED Merge aspect annotations with expander                            |         |       |  0:16 |   0.3 |
-| COMPLETED Merge inclusion directive annotations                             |         |       |  0:59 |   1.0 |
-| STARTED Merge annotations with formattables                                 |         |       |  2:35 |   2.6 |
-| STARTED Clean up terminology in dynamic                                     |         |       |  1:07 |   1.1 |
-| STARTED Rewrite profile support                                             |         |       |  1:26 |   1.5 |
-| STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.5 |
+#+CAPTION: Clock summary at [2016-10-09 Sun 22:55]
+| <75>                                                                        |          |        |       |       |
+| Headline                                                                    | Time     |        |       |     % |
+|-----------------------------------------------------------------------------+----------+--------+-------+-------|
+| *Total time*                                                                | *100:54* |        |       | 100.0 |
+|-----------------------------------------------------------------------------+----------+--------+-------+-------|
+| Stories                                                                     | 100:54   |        |       | 100.0 |
+| Active                                                                      |          | 100:54 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |          |        |  5:36 |   5.6 |
+| COMPLETED Edit release notes for previous sprint                            |          |        |  0:07 |   0.1 |
+| COMPLETED Generation of formattable is incorrect                            |          |        |  2:30 |   2.5 |
+| COMPLETED Visitor includes are incorrect                                    |          |        |  0:20 |   0.3 |
+| COMPLETED Add includer to quilt.cpp                                         |          |        |  1:46 |   1.8 |
+| COMPLETED Add reducer to quilt.cpp                                          |          |        |  0:22 |   0.4 |
+| COMPLETED Add new index to formtter container                               |          |        |  0:19 |   0.3 |
+| COMPLETED Add path expander to quilt.cpp                                    |          |        |  0:49 |   0.8 |
+| COMPLETED Add guard expander to quilt.cpp                                   |          |        |  0:27 |   0.4 |
+| COMPLETED Investigate borked travis build                                   |          |        |  0:37 |   0.6 |
+| COMPLETED Add decoration expander to quilt.cpp                              |          |        |  0:23 |   0.4 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |          |        |  1:26 |   1.4 |
+| COMPLETED Run tests that are passing on windows                             |          |        |  0:10 |   0.2 |
+| COMPLETED Add helper expander to quilt.cpp                                  |          |        |  1:26 |   1.4 |
+| COMPLETED Merge pre and post workflows                                      |          |        |  0:16 |   0.3 |
+| COMPLETED Fix bug in aspect and helper generation                           |          |        |  0:15 |   0.2 |
+| COMPLETED Investigate element annotation support                            |          |        |  2:05 |   2.1 |
+| CANCELLED Add streaming settings expander                                   |          |        |  0:36 |   0.6 |
+| COMPLETED Create the formattables model                                     |          |        |  1:32 |   1.5 |
+| COMPLETED Hook formattables into formatters                                 |          |        |  3:58 |   3.9 |
+| COMPLETED Remove empty context                                              |          |        |  1:09 |   1.1 |
+| COMPLETED Review main classes in quilt.cpp                                  |          |        |  3:42 |   3.7 |
+| COMPLETED Clean up element segmentation                                     |          |        |  1:20 |   1.3 |
+| COMPLETED Get OSX build to compile code                                     |          |        |  7:05 |   7.0 |
+| COMPLETED Add a banner to readme                                            |          |        |  1:29 |   1.5 |
+| COMPLETED Remove formatter group                                            |          |        |  0:23 |   0.4 |
+| COMPLETED Add more types to =quilt::cpp= canned tests                       |          |        |  0:15 |   0.2 |
+| CANCELLED Remove formatter id                                               |          |        |  0:04 |   0.1 |
+| COMPLETED Analysis around terminology in formatting space                   |          |        |  3:24 |   3.4 |
+| COMPLETED Remove =original_model_name=                                      |          |        |  0:16 |   0.3 |
+| COMPLETED Refactor code around model origination                            |          |        |  4:08 |   4.1 |
+| COMPLETED Remove formatter level facet folders                              |          |        |  0:06 |   0.1 |
+| COMPLETED Consider removing the "fake" primitive formatters                 |          |        |  0:01 |   0.0 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |          |        |  3:03 |   3.0 |
+| COMPLETED Create the notion of a formatter alias                            |          |        |  3:15 |   3.2 |
+| COMPLETED Remove enabled formatters from formatter configuration            |          |        |  0:22 |   0.4 |
+| COMPLETED Handle registration of services properly                          |          |        |  3:41 |   3.7 |
+| COMPLETED Move stereotypes to element                                       |          |        |  0:21 |   0.3 |
+| COMPLETED Improve project banner                                            |          |        |  0:32 |   0.5 |
+| CANCELLED Add support for profiles                                          |          |        | 10:40 |  10.6 |
+| COMPLETED Move emacs to rtags                                               |          |        |  5:28 |   5.4 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |          |        |  8:49 |   8.7 |
+| COMPLETED Create a dynamic expander in yarn                                 |          |        |  5:52 |   5.8 |
+| COMPLETED Create a streaming configuration expander                         |          |        |  1:15 |   1.2 |
+| COMPLETED Merge helper annotations with helper expander                     |          |        |  0:14 |   0.2 |
+| COMPLETED Merge aspect annotations with expander                            |          |        |  0:16 |   0.3 |
+| COMPLETED Merge inclusion directive annotations                             |          |        |  0:59 |   1.0 |
+| STARTED Merge path annotations with locator                                 |          |        |  2:09 |   2.1 |
+| STARTED Merge annotations with formattables                                 |          |        |  2:35 |   2.6 |
+| STARTED Clean up terminology in dynamic                                     |          |        |  1:07 |   1.1 |
+| STARTED Rewrite profile support                                             |          |        |  1:26 |   1.4 |
+| STARTED Generate formatter interfaces                                       |          |        |  0:28 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1376,6 +1377,13 @@ Get rid of the annotations for aspects.
 
 Get rid of the annotations for inclusion directives.
 
+*** STARTED Merge path annotations with locator                       :story:
+    CLOCK: [2016-10-09 Sun 21:38]--[2016-10-09 Sun 22:55] =>  1:17
+    CLOCK: [2016-10-09 Sun 20:45]--[2016-10-09 Sun 21:37] =>  0:52
+
+The only class using path annotations is now the locator. Move all the
+infrastructure to generate them into locator.
+
 *** Refactor facet directory expander                                 :story:
 
 Read meta-data for directory name direclty rather than use path
@@ -1395,11 +1403,6 @@ Tasks:
   definitions from this list;
 - cache top-level fields and facet fields and copy results instead of
   re-reading them.
-
-*** Merge path annotations with locator                               :story:
-
-The only class using path annotations is now the locator. Move all the
-infrastructure to generate them into locator.
 
 *** Merge opaque annotations with opaque expander                     :story:
 
