--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,18 +14,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-10 Mon 11:06]
+#+CAPTION: Clock summary at [2016-10-10 Mon 11:12]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *2:24* |      |      | 100.0 |
+| *Total time*                                                                | *2:29* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 2:24   |      |      | 100.0 |
-| Active                                                                      |        | 2:24 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |  15.3 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |  13.2 |
-| COMPLETED Improve bintray support                                           |        |      | 0:26 |  18.1 |
-| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  53.5 |
+| Stories                                                                     | 2:29   |      |      | 100.0 |
+| Active                                                                      |        | 2:29 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |  14.8 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |  12.8 |
+| COMPLETED Improve bintray support                                           |        |      | 0:26 |  17.4 |
+| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  51.7 |
+| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   3.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -89,6 +90,17 @@ Tasks:
 
 In addition we need to move all the other code (registrar, etc) into
 formattables.
+
+*** COMPLETED Remove any remnants of annotations from quilt           :story:
+    CLOSED: [2016-10-10 Mon 11:10]
+    CLOCK: [2016-10-10 Mon 11:07]--[2016-10-10 Mon 11:12] =>  0:05
+
+Grep the project for anyone still using this term and remove it.
+
+*** Merge decoration configuration and annotations factories          :story:
+
+As with quilt, get rid of the separation between annotations and
+configuration.
 
 *** Clean up terminology in dynamic                                   :story:
 
