--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,20 +14,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-10 Mon 12:20]
+#+CAPTION: Clock summary at [2016-10-10 Mon 12:42]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *3:37* |      |      | 100.0 |
+| *Total time*                                                                | *3:59* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 3:37   |      |      | 100.0 |
-| Active                                                                      |        | 3:37 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |  10.1 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   8.8 |
-| COMPLETED Improve bintray support                                           |        |      | 0:26 |  12.0 |
-| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  35.5 |
-| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   2.3 |
-| STARTED Solve the issue of too many "configurations"                        |        |      | 1:08 |  31.3 |
+| Stories                                                                     | 3:59   |      |      | 100.0 |
+| Active                                                                      |        | 3:59 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   9.2 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   7.9 |
+| COMPLETED Improve bintray support                                           |        |      | 0:26 |  10.9 |
+| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  32.2 |
+| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   2.1 |
+| STARTED Solve the issue of too many "configurations"                        |        |      | 1:30 |  37.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -104,6 +104,7 @@ Grep the project for anyone still using this term and remove it.
 This was missed in rename.
 
 *** STARTED Solve the issue of too many "configurations"              :story:
+    CLOCK: [2016-10-10 Mon 12:21]--[2016-10-10 Mon 12:43] =>  0:19
     CLOCK: [2016-10-10 Mon 12:01]--[2016-10-10 Mon 12:20] =>  0:19
     CLOCK: [2016-10-10 Mon 11:11]--[2016-10-10 Mon 12:00] =>  0:49
 
