--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,20 +14,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-10 Mon 20:52]
+#+CAPTION: Clock summary at [2016-10-10 Mon 21:37]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *5:45* |      |      | 100.0 |
+| *Total time*                                                                | *6:30* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 5:45   |      |      | 100.0 |
-| Active                                                                      |        | 5:45 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   6.4 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   5.5 |
-| COMPLETED Improve bintray support                                           |        |      | 0:26 |   7.5 |
-| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  22.3 |
-| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   1.4 |
-| STARTED Solve the issue of too many "configurations"                        |        |      | 3:16 |  56.8 |
+| Stories                                                                     | 6:30   |      |      | 100.0 |
+| Active                                                                      |        | 6:30 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   5.6 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.9 |
+| COMPLETED Improve bintray support                                           |        |      | 0:26 |   6.7 |
+| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  19.7 |
+| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   1.3 |
+| COMPLETED Solve the issue of too many "configurations"                      |        |      | 4:01 |  61.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -103,7 +103,9 @@ Grep the project for anyone still using this term and remove it.
 
 This was missed in rename.
 
-*** STARTED Solve the issue of too many "configurations"              :story:
+*** COMPLETED Solve the issue of too many "configurations"            :story:
+    CLOSED: [2016-10-10 Mon 21:37]
+    CLOCK: [2016-10-10 Mon 20:51]--[2016-10-10 Mon 21:36] =>  0:45
     CLOCK: [2016-10-10 Mon 20:23]--[2016-10-10 Mon 20:50] =>  0:27
     CLOCK: [2016-10-10 Mon 19:50]--[2016-10-10 Mon 20:22] =>  0:32
     CLOCK: [2016-10-10 Mon 13:16]--[2016-10-10 Mon 13:32] =>  0:16
@@ -139,6 +141,12 @@ Tasks:
 
 As with quilt, get rid of the separation between annotations and
 configuration.
+
+*** Clean up annotations and configuration in stitch                  :story:
+
+We deliberately skipped stitch on the clean up exercise for
+configuration/annotations, so we could look at it when doing wale
+templates.
 
 *** Clean up terminology in dynamic                                   :story:
 
