--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,20 +14,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-10 Mon 21:37]
+#+CAPTION: Clock summary at [2016-10-10 Mon 21:55]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:30* |      |      | 100.0 |
+| *Total time*                                                                | *6:48* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:30   |      |      | 100.0 |
-| Active                                                                      |        | 6:30 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   5.6 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.9 |
-| COMPLETED Improve bintray support                                           |        |      | 0:26 |   6.7 |
-| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  19.7 |
-| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   1.3 |
-| COMPLETED Solve the issue of too many "configurations"                      |        |      | 4:01 |  61.8 |
+| Stories                                                                     | 6:48   |      |      | 100.0 |
+| Active                                                                      |        | 6:48 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   5.4 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.7 |
+| COMPLETED Improve bintray support                                           |        |      | 0:26 |   6.4 |
+| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  18.9 |
+| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   1.2 |
+| COMPLETED Solve the issue of too many "configurations"                      |        |      | 4:19 |  63.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -105,6 +105,7 @@ This was missed in rename.
 
 *** COMPLETED Solve the issue of too many "configurations"            :story:
     CLOSED: [2016-10-10 Mon 21:37]
+    CLOCK: [2016-10-10 Mon 21:37]--[2016-10-10 Mon 21:55] =>  0:18
     CLOCK: [2016-10-10 Mon 20:51]--[2016-10-10 Mon 21:36] =>  0:45
     CLOCK: [2016-10-10 Mon 20:23]--[2016-10-10 Mon 20:50] =>  0:27
     CLOCK: [2016-10-10 Mon 19:50]--[2016-10-10 Mon 20:22] =>  0:32
