--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-10 Mon 22:17]
+#+CAPTION: Clock summary at [2016-10-10 Mon 22:32]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:09* |      |      | 100.0 |
+| *Total time*                                                                | *7:23* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:09   |      |      | 100.0 |
-| Active                                                                      |        | 7:09 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   5.1 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.4 |
-| COMPLETED Improve bintray support                                           |        |      | 0:26 |   6.1 |
-| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  17.9 |
-| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   1.2 |
-| COMPLETED Solve the issue of too many "configurations"                      |        |      | 4:01 |  56.2 |
-| COMPLETED Merge decoration configuration and annotations factories          |        |      | 0:18 |   4.2 |
-| STARTED Move annotation factories into expander in yarn                     |        |      | 0:19 |   4.4 |
+| Stories                                                                     | 7:23   |      |      | 100.0 |
+| Active                                                                      |        | 7:23 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   5.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.3 |
+| COMPLETED Improve bintray support                                           |        |      | 0:26 |   5.9 |
+| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  17.4 |
+| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   1.1 |
+| COMPLETED Solve the issue of too many "configurations"                      |        |      | 4:01 |  54.4 |
+| COMPLETED Merge decoration configuration and annotations factories          |        |      | 0:18 |   4.1 |
+| STARTED Move annotation factories into expander in yarn                     |        |      | 0:33 |   7.4 |
 | STARTED Clean up terminology in dynamic                                     |        |      | 0:02 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -148,6 +148,7 @@ As with quilt, get rid of the separation between annotations and
 configuration.
 
 *** STARTED Move annotation factories into expander in yarn           :story:
+    CLOCK: [2016-10-10 Mon 22:18]--[2016-10-10 Mon 22:32] =>  0:14
     CLOCK: [2016-10-10 Mon 21:58]--[2016-10-10 Mon 22:17] =>  0:19
 
 There were a couple of instances left out in the configuration
