--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-10 Mon 22:32]
+#+CAPTION: Clock summary at [2016-10-10 Mon 22:43]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:23* |      |      | 100.0 |
+| *Total time*                                                                | *7:32* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:23   |      |      | 100.0 |
-| Active                                                                      |        | 7:23 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   5.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.3 |
-| COMPLETED Improve bintray support                                           |        |      | 0:26 |   5.9 |
-| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  17.4 |
+| Stories                                                                     | 7:32   |      |      | 100.0 |
+| Active                                                                      |        | 7:32 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   4.9 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.2 |
+| COMPLETED Improve bintray support                                           |        |      | 0:26 |   5.8 |
+| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  17.0 |
 | COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   1.1 |
-| COMPLETED Solve the issue of too many "configurations"                      |        |      | 4:01 |  54.4 |
-| COMPLETED Merge decoration configuration and annotations factories          |        |      | 0:18 |   4.1 |
-| STARTED Move annotation factories into expander in yarn                     |        |      | 0:33 |   7.4 |
-| STARTED Clean up terminology in dynamic                                     |        |      | 0:02 |   0.5 |
+| COMPLETED Solve the issue of too many "configurations"                      |        |      | 4:01 |  53.3 |
+| COMPLETED Merge decoration configuration and annotations factories          |        |      | 0:18 |   4.0 |
+| STARTED Move annotation factories into expander in yarn                     |        |      | 0:42 |   9.3 |
+| STARTED Clean up terminology in dynamic                                     |        |      | 0:02 |   0.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -148,6 +148,7 @@ As with quilt, get rid of the separation between annotations and
 configuration.
 
 *** STARTED Move annotation factories into expander in yarn           :story:
+    CLOCK: [2016-10-10 Mon 22:33]--[2016-10-10 Mon 22:42] =>  0:09
     CLOCK: [2016-10-10 Mon 22:18]--[2016-10-10 Mon 22:32] =>  0:14
     CLOCK: [2016-10-10 Mon 21:58]--[2016-10-10 Mon 22:17] =>  0:19
 
